[gd_scene load_steps=7 format=3 uid="uid://c4jpggyrn7oc2"]

[ext_resource type="Script" path="res://scripts/start_game.gd" id="1_1nknf"]
[ext_resource type="Texture2D" uid="uid://b3723x1ovx18d" path="res://assets/sprites/tower1.png" id="1_pmmug"]
[ext_resource type="Texture2D" uid="uid://bqxjks1khgpr4" path="res://assets/sprites/tower1upgrade1.png" id="2_oohv1"]
[ext_resource type="Texture2D" uid="uid://da1oud3sx5goq" path="res://assets/sprites/enemy1.jpg" id="3_it5qd"]
[ext_resource type="Theme" uid="uid://bqnr1830yqwqe" path="res://assets/themes/td_theme.tres" id="5_8fbss"]
[ext_resource type="Texture2D" uid="uid://rdopl1ep0uqy" path="res://assets/sprites/dark-moon.png" id="6_f5ewd"]

[node name="StartGame" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 888.0
offset_bottom = 334.0
theme = ExtResource("5_8fbss")
script = ExtResource("1_1nknf")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 2
offset_right = 888.0
offset_bottom = 334.0
theme = ExtResource("5_8fbss")
theme_type_variation = &"ModalPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Heading" type="Label" parent="Background/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "How to Play"
horizontal_alignment = 1

[node name="Descriptions" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/Descriptions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Description" type="Label" parent="Background/MarginContainer/VBoxContainer/Descriptions/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Spend money to build towers and upgrade them."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer/Descriptions/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="TowerImage" type="TextureRect" parent="Background/MarginContainer/VBoxContainer/Descriptions/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_pmmug")

[node name="TowerImage2" type="TextureRect" parent="Background/MarginContainer/VBoxContainer/Descriptions/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_oohv1")

[node name="VBoxContainer2" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/Descriptions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Description2" type="Label" parent="Background/MarginContainer/VBoxContainer/Descriptions/VBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Kill all the enemies before you run out of lives!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer/Descriptions/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="EnemyImage" type="TextureRect" parent="Background/MarginContainer/VBoxContainer/Descriptions/VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_it5qd")

[node name="EnemyImage2" type="TextureRect" parent="Background/MarginContainer/VBoxContainer/Descriptions/VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_f5ewd")

[node name="PlayButtons" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayButton0" type="Button" parent="Background/MarginContainer/VBoxContainer/PlayButtons"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
text = "Play path 0"

[node name="PlayButton1" type="Button" parent="Background/MarginContainer/VBoxContainer/PlayButtons"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
text = "Play path 1"

[connection signal="focus_entered" from="Background/MarginContainer/VBoxContainer/PlayButtons/PlayButton0" to="." method="_on_play_button_0_focus_entered"]
[connection signal="mouse_entered" from="Background/MarginContainer/VBoxContainer/PlayButtons/PlayButton0" to="." method="_on_play_button_0_mouse_entered"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/PlayButtons/PlayButton0" to="." method="_on_play_button_0_pressed"]
[connection signal="focus_entered" from="Background/MarginContainer/VBoxContainer/PlayButtons/PlayButton1" to="." method="_on_play_button_1_focus_entered"]
[connection signal="mouse_entered" from="Background/MarginContainer/VBoxContainer/PlayButtons/PlayButton1" to="." method="_on_play_button_1_mouse_entered"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/PlayButtons/PlayButton1" to="." method="_on_play_button_1_pressed"]
